--- a/src/LoginSignUp/LoginSignUp.css
+++ b/src/LoginSignUp/LoginSignUp.css
@@ -1,8 +1,12 @@
 .Main-container{
+    background-image: url('../assets/Uirback.jpeg'); /* Adjust the path according to your project structure */
+    background-size: cover; /* Ensures the image covers the entire container */
+    background-position: center; /* Centers the background image */
     background-color: rgba(24, 54, 128, 0.3);
     width: 100%;
     position: absolute;
     height: 100%;
+    z-index: 1; /* Ensure it's behind other elements */
  }
 .back-img {
     width: 100%;
@@ -12,10 +16,10 @@
     flex-direction: column;
     margin: auto;
     margin-top: 150px;
-    background: white;
+    background: rgba(255, 255, 255, 0.9); /* Slightly transparent white background */
     width: 600px;
     padding-bottom: 30px;
-    z-index: 100;
+    z-index: 100; /* Ensure it's above the background */
     border-radius: 20px;
 }
 
@@ -102,6 +106,19 @@
     border-radius: 50px;
     font-size: 19px;
     font-weight: 700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.error-message {
+    color: red; /* Red color for error messages */
+    text-align: center; /* Center the text */
+    margin: 10px 0; /* Space above and below the error message */
+    font-weight: bold; /* Make the text bold */
+}
+
+/* Centering class for other elements */
+.center {
     display: flex;
     justify-content: center;
     align-items: center;
