--- a/src/LoginSignUp/LoginSignUp.css
+++ b/src/LoginSignUp/LoginSignUp.css
@@ -123,3 +123,14 @@
     justify-content: center;
     align-items: center;
 }
+
+/* .password-toggle-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+  } */
+  
